/*
 * Copyright (c) 2024 DuckDuckGo
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.duckduckgo.app.browser.defaultbrowsing.prompts

import android.content.Intent
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.StateFlow

interface DefaultBrowserPromptsExperiment {

    val highlightOverflowMenu: StateFlow<Boolean>
    val showOverflowMenuItem: StateFlow<Boolean>
    val commands: Flow<Command>

    fun onOverflowMenuOpened()
    fun onOverflowMenuItemClicked()

    fun onMessageDialogOpened()
    fun onMessageDialogDismissed()
    fun onMessageDialogSetBrowserButtonClicked()
    fun onMessageDialogNotNowButtonClicked()

    fun onSystemDefaultBrowserDialogOpened()
    fun onSystemDefaultBrowserDialogSuccess()
    fun onSystemDefaultBrowserDialogCanceled()

    fun onSystemDefaultAppsActivityOpened()
    fun onSystemDefaultAppsActivityClosed()

    sealed class Command {
        // todo consider making intent abstract param?
        data class OpenMessageDialog(val intent: Intent) : Command()
        data class OpenSystemDefaultBrowserDialog(val intent: Intent) : Command()
        data class OpenSystemDefaultAppsActivity(val intent: Intent) : Command()
    }
}
