@startuml
allowmixing

component MainProcessLifecycleObserver
note top of MainProcessLifecycleObserver
  The implementation class is the process observer so that it can check
  whether DDG is the default browser app whenever the process resumes.
  This allows us to check the state on app launch,
  but also when app is already running and user changed the default
  either via the system dialog or manually in system settings.
end note

abstract class DefaultBrowserPromptsExperimentCommand as "(sealed class) DefaultBrowserPromptsExperiment.Command"

class OpenMessageDialog as "(data class) OpenMessageDialog" {
  + intent: Intent
}

class OpenSystemDefaultBrowserDialog as "(data class) OpenSystemDefaultBrowserDialog" {
  + intent: Intent
}

class OpenSystemDefaultAppsActivity as "(data class) OpenSystemDefaultAppsActivity" {
  + intent: Intent
}

DefaultBrowserPromptsExperimentCommand <|-- OpenMessageDialog : extends
DefaultBrowserPromptsExperimentCommand <|-- OpenSystemDefaultBrowserDialog : extends
DefaultBrowserPromptsExperimentCommand <|-- OpenSystemDefaultAppsActivity : extends

interface DefaultBrowserPromptsExperiment {
  + val highlightOverflowMenu: StateFlow<Boolean>
  + val showOverflowMenuItem: StateFlow<Boolean>
  + val commands: Flow<DefaultBrowserPromptsExperiment.Command>

  + fun onOverflowMenuOpened()
  + fun onOverflowMenuItemClicked()

  + fun onMessageDialogOpened()
  + fun onMessageDialogDismissed()
  + fun onMessageDialogSetBrowserButtonClicked()
  + fun onMessageDialogNotNowButtonClicked()

  + fun onSystemDefaultBrowserDialogOpened()
  + fun onSystemDefaultBrowserDialogSuccess()
  + fun onSystemDefaultBrowserDialogCanceled()

  + fun onSystemDefaultAppsActivityOpened()
  + fun onSystemDefaultAppsActivityClosed()
}

DefaultBrowserPromptsExperiment::commands -> DefaultBrowserPromptsExperimentCommand : uses

note left of DefaultBrowserPromptsExperiment::commands
  Backed by a //Conflated Channel// so that the experiment
  can prepare an intent to be launched without being coupled
  with Activity/Fragment's lifecycle.

  The Activity/Fragment will pick up and execute the intent whenever its ready to do so.
end note

class DefaultBrowserPromptsOverflowMenuState as "(data class) DefaultBrowserPromptsOverflowMenuState" {
  + activatedDate: String
  + highlightOverflowMenu: Boolean
}

enum AdditionalPromptsCohorts {
  + CONTROL("control")
  + VARIANT_1("variant_1")
  + VARIANT_2("variant_2")
  + VARIANT_3("variant_3")
}

interface DefaultBrowserPromptsFeatureToggles {
  + additionalPrompts(): Toggle
}

DefaultBrowserPromptsFeatureToggles -> AdditionalPromptsCohorts : uses

interface DefaultBrowserPromptsDataStore {
  + val overflowMenuState: Flow<DefaultBrowserPromptsOverflowMenuState?>
  + val messageDialogOpenedCount: Flow<Int>
  + val alreadyConverted: Flow<Boolean>

  + suspend fun storeOverflowMenuState(state: DefaultBrowserPromptsOverflowMenuState?)
  + suspend fun storeMessageDialogOpenedCount(count: Int)
  + suspend fun convert()
}

note left of DefaultBrowserPromptsDataStore::alreadyConverted
  Notes if the user has already set the DDG browser as default while enrolled.
  Prevents counting users that keep changing the default browser multiple times.
end note

DefaultBrowserPromptsDataStore::overflowMenuState -> DefaultBrowserPromptsOverflowMenuState : uses

class DefaultBrowserPromptsDataStoreImpl {
  - val dataStore: DataStore<Preferences>
}

DefaultBrowserPromptsDataStore <|--- DefaultBrowserPromptsDataStoreImpl : implements

class DefaultBrowserPromptsExperimentImpl {
  - val applicationContext: Context
  - val defaultBrowserPromptsFeatureToggles: DefaultBrowserPromptsFeatureToggles
  - val defaultBrowserDetector: DefaultBrowserDetector
  - val defaultRoleBrowserDialog: DefaultRoleBrowserDialog
  - val defaultBrowserSystemSettings: DefaultBrowserSystemSettings
  - val appDaysUsedRepository: AppDaysUsedRepository
  - val defaultBrowserPromptsDataStore: DefaultBrowserPromptsDataStore
  - val pixelSender: PixelSender
}

MainProcessLifecycleObserver <|--- DefaultBrowserPromptsExperimentImpl : implements

DefaultBrowserPromptsExperiment <|-- DefaultBrowserPromptsExperimentImpl : implements

DefaultBrowserPromptsExperimentImpl::defaultBrowserPromptsDataStore --> DefaultBrowserPromptsDataStore : uses

DefaultBrowserPromptsExperimentImpl::defaultBrowserPromptsFeatureToggles --> DefaultBrowserPromptsFeatureToggles : uses

note left of DefaultBrowserPromptsExperimentImpl::applicationContext
  Used to create intents.
end note

note left of DefaultBrowserPromptsExperimentImpl::defaultBrowserPromptsFeatureToggles
  Used to manage cohorts and enrolment.
end note

note left of DefaultBrowserPromptsExperimentImpl::defaultBrowserDetector
  Used to check if the browser is set as default.
end note

note left of DefaultBrowserPromptsExperimentImpl::defaultRoleBrowserDialog
  Used to generate the intent to open the system's
  default browser dialog.
end note

note left of DefaultBrowserPromptsExperimentImpl::defaultBrowserSystemSettings
  Used to generate the intent to open the system's
  default app settings activity.
end note

note left of DefaultBrowserPromptsExperimentImpl::appDaysUsedRepository
  Used to monitor the active use days.
end note

note left of DefaultBrowserPromptsExperimentImpl::defaultBrowserPromptsDataStore
  Used to persist the stage of the experiment.
  Includes count of dialogs opened and overflow menu state.
end note

note left of DefaultBrowserPromptsExperimentImpl::PixelSender
  Used to send pixels defined in [[https://app.asana.com/0/1208671518894266/1208774988133227/f this Asana task]].
end note

component BrowserViewModel
BrowserViewModel --> DefaultBrowserPromptsExperiment : uses
note top of BrowserViewModel
  Monitors the experiment to open the message dialog
  that encourages users to set the DDG app as default browser.
end note

component OmnibarLayoutViewModel
OmnibarLayoutViewModel --> DefaultBrowserPromptsExperiment : uses
note top of OmnibarLayoutViewModel
  Monitors the experiment to show
  a blue highlight dot next to overflow menu three-dots.
end note

component BrowserTabViewModel
BrowserTabViewModel --> DefaultBrowserPromptsExperiment : uses
note top of BrowserTabViewModel
  Monitors the experiment to add
  an overflow menu item to set browser as default.
end note

@enduml